--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,8 @@ branches:
 install:
   - cd ..
   - dir
-  - curl -fsS -o pin.zip 'https://software.intel.com/sites/landingpage/pintool/downloads/pin-3.30-98830-g1d7b601b3-msvc-windows.zip'
+  - ps: Start-FileDownload 'https://software.intel.com/sites/landingpage/pintool/downloads/pin-3.30-98830-g1d7b601b3-msvc-windows.zip'
+  - move pin-3.30-98830-g1d7b601b3-msvc-windows.zip pin.zip
   - 7z x pin.zip
   - dir
   - cd pin
