--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,6 +40,7 @@ after_build:
   - mkdir C:\projects\tiny-tracer\%artifactName%
   - move x64\Release\TinyTracer.dll install32_64\TinyTracer64.dll
   - cp -r install32_64 C:\projects\tiny-tracer\%artifactName%
+  - cd C:\projects\tiny-tracer
   
 artifacts:
   - path: %artifactName%
