--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,6 +25,10 @@ install:
 build:
   verbosity: detailed
 
+environment:
+  buildConfig: $(CONFIGURATION)
+  buildPlatform: $(PLATFORM)
+
 configuration:
   - Release
     
